Started config flow and multiple output support

--- a/tessla/manifest.json
+++ b/tessla/manifest.json
@@ -1,8 +1,9 @@
 {
-    "domain": "tessla",
-    "name": "Tessla",
-    "documentation": "https://yourcomponentdocs.com",
-    "dependencies": [],
-    "codeowners": [],
-    "version": "0.1.0"
-  }
+  "domain": "tessla",
+  "name": "Tessla",
+  "codeowners": ["@Andy-Sandy, @Lyslo"],
+  "config_flow": true,
+  "dependencies": [],
+  "documentation": "https://github.com/Andy-Sandy/TeSSLa-for-HA",
+  "iot_class": "local_polling"
+}
