--- a/tessla/manifest.json
+++ b/tessla/manifest.json
@@ -5,5 +5,6 @@
   "config_flow": true,
   "dependencies": [],
   "documentation": "https://github.com/Andy-Sandy/TeSSLa-for-HA",
-  "iot_class": "local_polling"
+  "iot_class": "local_polling",
+  "version": "1.0.0"
 }
